# heltec_pika_python_example

./: CMakeLists.txt  LICENSE  README.md  sdkconfig
components/pika_package/: CMakeLists.txt  main.py  requestment.txt
components/pika_package/pikascript-api/: PikaStdData_Tuple.h  PikaStdDevice.h  __asset_pikaModules_py_a.c  __pikaBinding.c  module_list_default.txt  pikaScript.c
main/: CMakeLists.txt  pika_python_uaer_main.c
